--- a/.github/workflows/Docs.yml
+++ b/.github/workflows/Docs.yml
@@ -18,7 +18,7 @@ jobs:
         shell: julia --color=yes {0}
         run: |
           using Pkg: Pkg
-          Pkg.develop(".")
+          Pkg.develop(; path=".")
           Pkg.activate("docs")
           Pkg.instantiate()
 
