--- a/.github/workflows/Docs.yml
+++ b/.github/workflows/Docs.yml
@@ -10,6 +10,7 @@ on:
 jobs:
   BuildAndDeploy:
     name: Documentation
+    permissions: write-all
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
