--- a/Project.toml
+++ b/Project.toml
@@ -5,9 +5,11 @@ version = "1.0.0"
 
 [deps]
 Formatting = "59287772-0a20-5a39-b81b-1366585eb4c0"
+PrettyTables = "08abe8d2-0d0c-5749-adfa-8a2ac140af0d"
 
 [compat]
 Formatting = "0.4"
+PrettyTables = "1"
 julia = "1.6"
 
 [extras]
