--- a/.github/workflows/Docs.yml
+++ b/.github/workflows/Docs.yml
@@ -24,12 +24,13 @@ jobs:
           Pkg.instantiate()
 
       - name: Build docs and deploy to the docs branch
-        shell: DISPLAY=:0 xvfb-run -s '-screen 0 1024x768x24' julia --color=yes {0}
+        shell: bash
         run: |
-          using Pkg: Pkg
-          dir = pwd()
-          Pkg.activate("docs")
-          include(joinpath(dir, "docs", "make.jl"))
+          DISPLAY=:0 xvfb-run -s '-screen 0 1024x768x24' julia --color=yes '
+            using Pkg: Pkg;
+            dir = pwd();
+            Pkg.activate("docs");
+            include(joinpath(dir, "docs", "make.jl"));'
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
