--- a/.github/workflows/Docs.yml
+++ b/.github/workflows/Docs.yml
@@ -25,8 +25,7 @@ jobs:
 
       - name: Build docs and deploy to the docs branch
         shell: bash
-        run: |
-          DISPLAY=:0 xvfb-run -s '-screen 0 1024x768x24' julia --color=yes '
+        run: DISPLAY=:0 xvfb-run -s '-screen 0 1024x768x24' julia --color=yes '
             using Pkg: Pkg;
             dir = pwd();
             Pkg.activate("docs");
