--- a/.github/workflows/Docs.yml
+++ b/.github/workflows/Docs.yml
@@ -14,22 +14,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-
-      - name: Instantiate docs/
-        shell: julia --color=yes {0}
-        run: |
-          using Pkg: Pkg
-          Pkg.activate("docs")
-          Pkg.develop(; path=".")
-          Pkg.instantiate()
-
-      - name: Build docs and deploy to the docs branch
-        shell: bash
-        run: DISPLAY=:0 xvfb-run -s '-screen 0 1024x768x24' julia --color=yes '
-            using Pkg: Pkg;
-            dir = pwd();
-            Pkg.activate("docs");
-            include(joinpath(dir, "docs", "make.jl"));'
+      - uses: julia-actions/julia-buildpkg@v1
+      - uses: julia-actions/julia-docdeploy@v1
+        prefix: "DISPLAY=:0 xvfb-run -s '-screen 0 1024x768x24'"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
