--- a/.github/workflows/Docs.yml
+++ b/.github/workflows/Docs.yml
@@ -11,13 +11,23 @@ jobs:
   BuildAndDeploy:
     name: Documentation
     permissions: write-all
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     steps:
       - uses: actions/checkout@v2
-      - uses: julia-actions/julia-buildpkg@v1
-      - uses: julia-actions/julia-docdeploy@v1
-        with:
-          prefix: "xvfb-run -s '-screen 0 1024x768x24'"
+
+      - name: Instantiate docs/
+        shell: julia --color=yes {0}
+        run: |
+          using Pkg: Pkg
+          Pkg.activate("docs")
+          Pkg.develop(; path=".")
+          Pkg.instantiate()
+      - name: Build docs and deploy to the docs branch
+        run: DISPLAY=:0 xvfb-run -s '-screen 0 1024x768x24' julia --project -e '
+          using Pkg: Pkg;
+          dir = pwd();
+          Pkg.activate("docs");
+          include(joinpath(dir, "docs", "make.jl"));'
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
