--- a/.github/workflows/Docs.yml
+++ b/.github/workflows/Docs.yml
@@ -23,13 +23,14 @@ jobs:
           Pkg.develop(; path=".")
           Pkg.instantiate()
       - name: Build docs and deploy to the docs branch
+        shell: julia --color=yes {0}
         run: |
-          DISPLAY=:0 xvfb-run -s '-screen 0 1024x768x24' julia --project -e '
-            using Pkg: Pkg;
-            dir = pwd();
-            Pkg.activate("docs");
-            include(joinpath(dir, "docs", "make.jl"));'
+            using Pkg: Pkg
+            dir = pwd()
+            Pkg.activate("docs")
+            include(joinpath(dir, "docs", "make.jl"))
         env:
+          COLUMNS: '200'
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
   MonoDeploy:
