--- a/.github/workflows/Docs.yml
+++ b/.github/workflows/Docs.yml
@@ -11,7 +11,7 @@ jobs:
   BuildAndDeploy:
     name: Documentation
     permissions: write-all
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
       - uses: julia-actions/julia-buildpkg@v1
