--- a/.github/workflows/Docs.yml
+++ b/.github/workflows/Docs.yml
@@ -14,23 +14,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-
-      - name: Instantiate docs/
-        shell: julia --color=yes {0}
-        run: |
-          using Pkg: Pkg
-          Pkg.activate("docs")
-          Pkg.develop(; path=".")
-          Pkg.instantiate()
-
-      - name: Build docs and deploy to the docs branch
-        shell: julia --color=yes {0}
-        run: |
-          using Pkg: Pkg
-          dir = pwd()
-          Pkg.activate("docs")
-          include(joinpath(dir, "docs", "make.jl"))
+      - uses: julia-actions/julia-buildpkg@v1
+      - uses: julia-actions/julia-docdeploy@v1
         env:
+          COLUMNS: '200'
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
   MonoDeploy:
