Set `permissions: contents: write`

--- a/.github/workflows/Docs.yml
+++ b/.github/workflows/Docs.yml
@@ -11,7 +11,7 @@ jobs:
   BuildAndDeploy:
     name: Documentation
     permissions:
-      pages: write
+      contents: write
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
