--- a/Project.toml
+++ b/Project.toml
@@ -9,7 +9,7 @@ PrettyTables = "08abe8d2-0d0c-5749-adfa-8a2ac140af0d"
 
 [compat]
 Formatting = "0.4"
-PrettyTables = "0.9"
+PrettyTables = "0.9, 1"
 julia = "1.6"
 
 [extras]
